--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "last 3 safari versions"
   ],
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0"
   }
