--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "outside",
-  "version": "3.0.0",
-  "description": "Boilerplate for WDD 330 SleepOutside project",
+  "name": "MovieDB",
+  "version": "1.0.0",
+  "description": "MovieDB Project for WDD 330 class",
   "main": "main.js",
   "scripts": {
     "start": "vite",
@@ -9,14 +9,16 @@
     "preview": "vite preview",
     "lint": "eslint *.js src/**/*.js",
     "format": "prettier --ignore-path ./.gitignore --write \"./**/*.{html,json,js,ts,css}\"",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "gh-pages -d dist"
   },
-  "author": "Shane Thompson",
+  "author": "Glaucio Oliveira",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "gh-pages": "^6.3.0",
     "jest": "^29.2.2",
     "prettier": "^2.7.1",
     "vite": "^4.5.5"
